module(
    name = "nanobind",
    version = "0.2.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_python", version = "0.21.0")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(name="python3_10", python_version="3.10")
use_repo(python, "python3_10")
use_repo(python, "python3_10_toolchains")

register_toolchains(
    "@python3_10_toolchains//:all",
)
